--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,9 @@
  /* div, ul, li, img, h1, h2, h3, h4, p {
   border: 1px solid red;
+}
+
+.space {
+  height: 1100px;
 } */
 
 
@@ -68,9 +72,8 @@
   background-color: #2f80ed;
   position: absolute;
   right: 0;
-  z-index: 1;
   top: 64px;
-
+  z-index: 1;
   }
 
 .header__image {
@@ -113,15 +116,6 @@
 
 }
 
-/* .two-columns__title {
-  line-height: 1.2;
-  font-size: 18px;
-  font-weight: normal;
-  color: #2f80ed;
-  padding: 0;
-
-} */
-
 
 .two-columns__main-text {
   width: 80%;
@@ -137,9 +131,6 @@
 
 }
 
-/* .two-columns__paragraph_content {
-  padding: 0;
-} */
 
 .two-columns__span-accent {
   font-weight: bold;
@@ -185,28 +176,21 @@
   display: flex;
   margin: 0 auto 100px auto;
   width: 1100px;
-
-}
-
-.table__cell {
-  display: flex;
   flex-wrap: wrap;
   list-style: none;
   padding: 0;
-  margin: 0;
-  justify-content: space-around;
+  justify-content: space-between;
+
 }
 
 
-.table__cards {
+.table__cell {
   width: 250px;
   margin: 60px 0 0 0;
   padding: 0;
 }
 
-/* .table__cards:last-of-type {
-  margin-right: 0;
-} */
+
 
 .table__heading {
   padding: 0;
@@ -222,10 +206,11 @@
 
 
 .feynman {
-  bottom: 0;
   background-color: #f2f2f2;
   position: relative;
   min-height: 790px;
+  padding-top: 1px;
+  z-index: -5;
   /* background-image: url("../images/feynman.png");
   background-position: left bottom;
   background-repeat: no-repeat;
@@ -233,26 +218,25 @@
 }
 
 
-/*.feynman__image {
+.feynman__image {
   height: 637px;
   width: 867px;
   position: absolute;
   left: 0;
   bottom: 0;
+  z-index: -4;
 
-}*/
+}
 
-.feynman__image {
+/* .feynman__image_ {
   background-image: url("../images/feynman.png");
-  /* background-position: left bottom; */
+  background-position: left bottom;
   background-repeat: no-repeat;
   background-size: 100%;
   height: 637px;
   width: 867px;
   z-index: 1;
-
-
-}
+} */
 
 
 .feynman__title {
@@ -268,18 +252,14 @@
 
 }
 
-
 .feynman__subtitle {
   text-align: center;
   margin-top: 70px;
   font-size: 36px;
   line-height: 51px;
   font-weight: normal;
-
-
-
+  z-index: 3;
 }
-
 
 .feynman__link {
   line-height: 51px;
@@ -291,7 +271,6 @@
   text-decoration: none;
   text-decoration-color: black;
   z-index: 2;
-
 }
 
 
@@ -303,21 +282,17 @@
   z-index: 2;
   overflow: hidden;
   position: relative;
-
 }
 
 .section-title_theme_dark {
   width: 60%;
   margin: auto;
-  /* display: flex;
-  justify-content: center; */
   line-height: 69px;
   font-size: 60px;
   font-weight: bold;
   margin-top: 90px;
   text-align: center;
   color: white;
-
 }
 
 .section-subtitle_theme_dark  {
@@ -329,7 +304,6 @@
   font-size: 24px;
   font-weight: normal;
   color: white;
-
 }
 
 .table_theme_dark {
@@ -339,7 +313,7 @@
   flex-wrap: wrap;
   list-style: none;
   padding: 0;
-  justify-content: space-around;
+  justify-content: space-between;
   color: white;
 }
 
@@ -371,3 +345,88 @@
   z-index: -1;
   }
 
+
+
+  .footer {
+    min-height: 350px;
+    background: black;
+    color: white;
+    padding-top: 1px;
+    flex-basis: 711px;
+    display: flex;
+
+
+  }
+
+  .footer__columns {
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
+    margin: 60px auto 40px auto;
+  }
+
+
+  .footer__column_content_copyright {
+    width: 50%;
+
+  }
+
+  .footer__author {
+    margin: 170px 0 18px 0;
+    line-height: 25px;
+    font-size: 18px;
+    font-weight: normal;
+
+  }
+
+
+  .logo_place_footer {
+    height: 35px;
+    width: 183px;
+
+
+  }
+
+  .footer__column_content_info {
+
+
+
+  }
+
+  .footer__column_heading {
+    line-height: 45px;
+    font-size: 18px;
+    font-weight: bold;
+    margin: 0 0 20px 0;
+
+
+  }
+
+
+  .footer__column_list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+
+  .footer__column_links {
+    text-decoration: none;
+    line-height: 30px;
+    font-size: 18px;
+    font-weight: normal;
+    color: white;
+  }
+
+.footer_column_content_social {
+
+
+
+}
+
+
+.footer__social_icon {
+  height: 16px;
+  width: 16px;
+  margin-right: 10px;
+
+}
