Made changes from code review 1

--- a/blocks/column-links/column-links.css
+++ b/blocks/column-links/column-links.css
@@ -4,7 +4,14 @@
   font-size: 18px;
   font-weight: normal;
   color: #fff;
+  transition: opacity .3s ease;
 }
 
+
+.column-links:hover {
+
+    opacity:.5;
+
+ }
 
 
