--- a/blocks/cards/__item/cards__item.css
+++ b/blocks/cards/__item/cards__item.css
@@ -2,12 +2,21 @@
   width: 206px;
   margin-right: 100px;
 
+
+}
+
+.cards__item:nth-of-type(2) {
+  margin-right: 100px;
+}
+
+.cards__item:nth-of-type(3) {
+  margin-right: 0;
 }
 
 
 .cards__item:last-child {
-  margin-right: auto;
-
-
+  margin-right: 357px;
 
 }
+
+
