--- a/blocks/feynman/__link/feynman__link.css
+++ b/blocks/feynman/__link/feynman__link.css
@@ -8,4 +8,13 @@
   text-decoration: none;
   color: #000;
   z-index: 2;
+  transition: opacity .3s ease;
+
 }
+
+
+.feynman__link:hover {
+
+    opacity:.5;
+
+ }
