--- a/blocks/khan/__buy-link/khan__buy-link.css
+++ b/blocks/khan/__buy-link/khan__buy-link.css
@@ -4,4 +4,11 @@
   font-weight: normal;
   text-decoration: none;
   color: #2f80ed;
+  transition: opacity .3s ease;
+
 }
+
+
+.khan__buy-link:hover {
+    opacity:.5;
+ }
