--- a/blocks/khan/__quote/khan__quote.css
+++ b/blocks/khan/__quote/khan__quote.css
@@ -3,6 +3,6 @@
   font-size: 24px;
   font-weight: normal;
   width: 790px;
-  margin-top: 50px;
-  margin-bottom: 36px;
+  margin: 50px 0 36px 0;
+
 }
