--- a/blocks/khan/__book-pic/khan__book-pic.css
+++ b/blocks/khan/__book-pic/khan__book-pic.css
@@ -2,7 +2,7 @@
   height: 608px;
   width: 620px;
   margin-right: 48px;
-  object-fit: fill;
-  object-position: 50% 50%;
+  object-fit: cover;
+  object-position: top;
 
 }
